fixed alignment

--- a/css/sagenda.css
+++ b/css/sagenda.css
@@ -2,6 +2,7 @@
     width: 100%;        
     padding: 15px;
     display: block;
+    padding-left: 0px;
 }
 .sagenda_row {       
 
